[gd_scene load_steps=6 format=3 uid="uid://c1eafjihkbbbb"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_v5mvo"]
[ext_resource type="Texture2D" uid="uid://b2tm06x01kfia" path="res://assets/background idea 2.jpg" id="2_htuob"]
[ext_resource type="Texture2D" uid="uid://02goy6wxsjng" path="res://assets/character assets/another npc.png" id="3_1tqpf"]
[ext_resource type="PackedScene" uid="uid://cfbf7dn04kvg6" path="res://scenes/overlays/input_stop.tscn" id="3_6nyop"]
[ext_resource type="Texture2D" uid="uid://dmqe88wsd8bxu" path="res://assets/character assets/Eternal Rest.png" id="4_ge36j"]

[node name="shop" type="Node2D"]
script = ExtResource("1_v5mvo")

[node name="bg" type="Sprite2D" parent="."]
visible = false
position = Vector2(1007, 768)
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_htuob")

[node name="to_lobby" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 50
text = "<"
metadata/_edit_use_anchors_ = true

[node name="AnotherNpc" type="Sprite2D" parent="."]
position = Vector2(1649, 604)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_1tqpf")

[node name="EternalRest" type="Sprite2D" parent="AnotherNpc"]
position = Vector2(-5.33337, -38.6667)
rotation = 2.77599
scale = Vector2(1.10257, -1.13498)
skew = 0.0120518
texture = ExtResource("4_ge36j")

[node name="Label" type="Label" parent="."]
offset_left = 1428.0
offset_top = 566.0
offset_right = 1892.0
offset_bottom = 638.0
text = "greetings, unfortunately i have nothing to sell you for now :/
the weapon is totally not a secret"

[node name="input_stop" parent="." instance=ExtResource("3_6nyop")]
visible = false

[node name="to_secret" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 1455.0
offset_top = 146.0
offset_right = 1827.0
offset_bottom = 1064.0

[connection signal="pressed" from="to_lobby" to="." method="_on_to_lobby_pressed"]
[connection signal="pressed" from="to_secret" to="." method="_on_to_secret_pressed"]
